--- a/css/a-stylesheet.css
+++ b/css/a-stylesheet.css
@@ -77,8 +77,7 @@ footer{
 
 }
 .sec-title-2{
-  color: white;
-  opacity: .95;
+  color: #CFDCF2;
   font-weight: 800;
   font-size: 30px;
   text-transform: uppercase;
@@ -145,8 +144,7 @@ footer{
   color: #3d3d3d;
 }
 .img-light{
-  color: white;
-  opacity: .85;
+  color: #CFDCF2;
   padding-bottom: 6px;
 }
 .img-dark{
