--- a/css/a-stylesheet.css
+++ b/css/a-stylesheet.css
@@ -26,7 +26,6 @@ h1{
   text-transform: uppercase;
   word-spacing: 16px;
   letter-spacing: 1px;
-
 }
 h2{
   color: #5b5b5b;
@@ -83,6 +82,7 @@ footer{
   text-transform: uppercase;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
+
 }
 .sec-title-2-dark{
   color: #3d3d3d;
@@ -97,6 +97,34 @@ footer{
   color: white;
   text-align: center;
   padding: 20px 320px 20px 320px;
+  font-size: 22px;
+  font-weight: 400;
+}
+.sec-text-j{
+  color: white;
+  text-align: justify;
+  padding: 20px 280px 20px 280px;
+  font-size: 22px;
+  font-weight: 400;
+}
+.sec-text-general{
+  color: white;
+  text-align: center;
+  padding: 20px 0px 20px 0px;
+  font-size: 22px;
+  font-weight: 400;
+}
+.sec-text-general-l{
+  color: white;
+  text-align: left;
+  padding: 20px 50px 20px 60px;
+  font-size: 22px;
+  font-weight: 400;
+}
+.sec-text-general-r{
+  color: white;
+  text-align: right;
+  padding: 20px 70px 20px 40px;
   font-size: 22px;
   font-weight: 400;
 }
@@ -143,9 +171,29 @@ footer{
   font-weight: bold;
   color: #3d3d3d;
 }
+.number-large{
+  color: white;
+  font-weight: 600;
+  font-size: 62px;
+  padding: 0 20px 0 0;
+  float: left;
+  margin: 0px 0px 130px 0px;
+}
 .img-light{
   color: #CFDCF2;
   padding-bottom: 6px;
+}
+.img-small{
+  color: white;
+  padding: 6px 20px 6px 0;
+  margin: 0px 0px 80px 0px;
+  float: left;
+}
+.img-xsmall{
+  color: white;
+  padding: 6px 20px 6px 0;
+  margin: 0px 0px 0px 0px;
+  float: left;
 }
 .img-dark{
   color: #3d3d3d;
