--- a/css/a-stylesheet.css
+++ b/css/a-stylesheet.css
@@ -79,13 +79,12 @@ footer{
 
 }
 .sec-title-2{
-  color: #CFDCF2;
+  color: #4BADA2;
   font-weight: 800;
   font-size: 30px;
   text-transform: uppercase;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
-
 }
 .sec-title-2-dark{
   color: #3d3d3d;
