added .special-text class to bootstrap.css and crowdfunding link to index.html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4558,6 +4558,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > li > a {
   color: #777;
 }
+.navbar-default .navbar-nav > li > .special-text {
+  color: #FD3332;;
+}
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333;
