--- a/css/b-responsive.css
+++ b/css/b-responsive.css
@@ -669,6 +669,11 @@
     padding-left: 10px;
     background-color: white;
   }
+
+  #callout {
+    margin-bottom: -100px;
+  }
+
   .sec-text{
     padding: 20px 20px 20px 20px;
     text-align: center;
@@ -801,6 +806,9 @@
   .nav{
     padding-left: 10px;
     background-color: white;
+  }
+  #callout{
+    margin-bottom: -70px;
   }
   .main-menu-imgs{
     width: 40%;
@@ -936,6 +944,9 @@
   .nav{
     padding-left: 10px;
     background-color: white;
+  }
+  #callout {
+    margin-bottom: -70px;
   }
   .main-menu-imgs{
     width: 30%;
