--- a/css/comp.css
+++ b/css/comp.css
@@ -2,6 +2,7 @@ body {
   width:100%;
 	height:100%;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 .noSpace {
@@ -9,6 +10,17 @@ body {
   padding: 0;
 }
 
+.blue {
+  color: #2A85BC;
+}
+
+.red{
+  color: #ED5B60;
+}
+
+.bold {
+  font-weight: 700;
+}
 #broughtBy {
   background-color: #044059;
   color: white;
