--- a/css/comp.css
+++ b/css/comp.css
@@ -22,6 +22,23 @@ body {
   font-weight: 700;
 }
 
+#navContainer {
+  color: white;
+  text-transform: uppercase;
+  padding-top: 10vh;
+  padding-left: 2em;
+}
+
+#navContainer a{
+  color: white;
+  text-decoration: none;
+  font-style: italic;
+}
+
+#navContainer a:hover{
+  color: #ED5B60;
+}
+
 #header{
   text-align: center;
 }
