--- a/css/sidenav.css
+++ b/css/sidenav.css
@@ -82,6 +82,7 @@ header {
   overflow-y: scroll;
   padding: 20px;
   -webkit-overflow-scrolling: touch;
+  z-index: 8;
 }
 
 /* actual page content pane*/
