--- a/css/comp.css
+++ b/css/comp.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+h1 {
+  font-size: 3.2em;
+}
+
 .noSpace {
   margin: 0;
   padding: 0;
@@ -93,6 +97,16 @@ body {
   text-align: center;
   padding-top: 5vh;
   padding-bottom: 5vh;
+  font-size: 1.25em;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+#code h1 {
+  font-size: 2.5em;
+}
+#code h3 {
+  font-size: 1.25em;
 }
 
 #prizes {
@@ -111,10 +125,6 @@ body {
   color: #044059;
   font-weight: 600;
   font-size: .875em;
-}
-
-h1 {
-  font-size: 3.2em;
 }
 
 #dates {
@@ -213,4 +223,5 @@ h1 {
   z-index: 3;
   position: relative;
   margin-top: -22vh;
+  color: #044059;
 }
