--- a/css/comp.css
+++ b/css/comp.css
@@ -169,9 +169,20 @@ h1 {
   background-color: #ED5B60;
   color: white;
   font-size: 1em;
-  font-weight: 600;
+  font-weight: normal;
   padding-top: 8vh;
   padding-bottom: 8vh;
+}
+
+#rules h1 {
+  font-size: 4.5em;
+  line-height: .9;
+}
+
+#rules a {
+  text-decoration: underline;
+  color: white;
+
 }
 
 #register {
