--- a/css/comp.css
+++ b/css/comp.css
@@ -26,6 +26,10 @@ h1 {
   font-weight: 700;
 }
 
+.light {
+  font-weight: 400;
+}
+
 #navContainer {
   color: white;
   text-transform: uppercase;
