swapped contest schedule pic

--- a/css/comp.css
+++ b/css/comp.css
@@ -141,8 +141,8 @@ h1 {
 }
 
 #scheduleImg {
-  background-image: url("../img/comp/hero.jpg");
-  background-position: right bottom;
+  background-image: url("../img/comp/twogirls_laptop.png");
+  background-position: left bottom;
   background-size: cover;
 }
 
