--- a/css/comp.css
+++ b/css/comp.css
@@ -258,11 +258,26 @@ h1 {
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   #rules {
     padding-left: 0;
+    margin-left: 0;
+  }
+  #ruleCol {
+    padding-left: 0;
+    margin-left: 0;
+  }
+  #rules h1 {
+    padding-left: .5em;
+    font-size: 3em;
   }
   #register {
-    padding-left: 1em;
+    padding-left: .5em;
+  }
+  #register h1 {
+    font-size: 3em;
   }
   #ruleList {
     padding-left: 1em;
+  }
+  #dates {
+    padding-left: 0;
   }
 }
